--- a/single1.html
+++ b/single1.html
@@ -67,14 +67,14 @@
 
             <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                 <div class="navbar-nav ml-auto">
-                    <a href="index.html" class="nav-item nav-link active">Home</a>
+                    <a href="index.html" class="nav-item nav-link ">Home</a>
                     <a href="about.html" class="nav-item nav-link">About</a>
                     <a href="causes.html" class="nav-item nav-link">What we do</a>
                     
                     <!-- <a href="causes.html" class="nav-item nav-link">Causes</a> -->
                     <a href="event.html" class="nav-item nav-link">Events</a>
                     <div class="nav-item dropdown">
-                        <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Our Projects</a>
+                        <a href="#" class="nav-link dropdown-toggle active" data-toggle="dropdown">Our Projects</a>
                         <div class="dropdown-menu">
                             <a href="single.html" class="dropdown-item">Project Akshar</a>
                             <a href="single1.html" class="dropdown-item">Project Anand</a>
